--- a/css/style.css
+++ b/css/style.css
@@ -249,6 +249,7 @@ body {
 }
 
 .button-filter {
+  display: block;
   padding: 6px 22px;
   color: var(--title-text-color);
   font-size: 16px;
@@ -585,8 +586,12 @@ body {
   text-decoration: none;
 }
 
+.cards-item .link {
+  display: block;
+}
+
 .cards-item .link:hover,
-.cards-item .link: :focus {
+.cards-item .link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
