--- a/css/style.css
+++ b/css/style.css
@@ -588,6 +588,7 @@ body {
 
 .cards-item .link {
   display: block;
+  margin-bottom: 20px;
 }
 
 .cards-item .link:hover,
@@ -600,4 +601,5 @@ body {
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
+  padding: 20px 24px;
 }
